[gd_scene load_steps=9 format=3 uid="uid://dacmxxndhic6b"]

[ext_resource type="Texture2D" uid="uid://diw83q4bmsulp" path="res://assets/tankBody.png" id="1_alfbm"]
[ext_resource type="Script" path="res://scripts/enemy_tank.gd" id="1_bl4ox"]
[ext_resource type="Texture2D" uid="uid://cu6dqvkjbphha" path="res://assets/tankGun.png" id="2_ckxeu"]
[ext_resource type="Shape2D" uid="uid://6xdbfm0p43j8" path="res://assets/bullet_collision.tres" id="4_ipecw"]
[ext_resource type="AudioStream" uid="uid://bxqoudtw8s8bt" path="res://assets/audio/enemy_shoot.wav" id="4_vql7d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5vn6"]
size = Vector2(50.5, 36.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_3faic"]
radius = 1024.0

[sub_resource type="SphereMesh" id="SphereMesh_2k70l"]
radius = 10.0
height = 20.0

[node name="enemy" type="CharacterBody2D"]
modulate = Color(1, 0, 0, 1)
collision_layer = 4
collision_mask = 225
script = ExtResource("1_bl4ox")

[node name="nav_agent" type="NavigationAgent2D" parent="."]

[node name="tankBody" type="Sprite2D" parent="."]
scale = Vector2(0.71, 0.7)
texture = ExtResource("1_alfbm")

[node name="tankGun" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(0.815, 0.833)
texture = ExtResource("2_ckxeu")
offset = Vector2(0, 16.534)

[node name="CollisionShape2D" type="ShapeCast2D" parent="tankGun"]
position = Vector2(0, 84)
scale = Vector2(0.5, 0.5)
shape = ExtResource("4_ipecw")
target_position = Vector2(0, 0)
collision_mask = 160

[node name="fire_loc" type="Node2D" parent="tankGun/CollisionShape2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_y5vn6")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="shot_timer" type="Timer" parent="."]
autostart = true

[node name="mine_timer" type="Timer" parent="."]
autostart = true

[node name="vision" type="ShapeCast2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_3faic")
target_position = Vector2(0, 0)
margin = 10.0
collision_mask = 3

[node name="dummy" type="MeshInstance2D" parent="."]
visible = false
top_level = true
mesh = SubResource("SphereMesh_2k70l")

[node name="Enemy_Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vql7d")
bus = &"FX"

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="shot_timer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="mine_timer" to="." method="_on_mine_timer_timeout"]
